--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
